# stm32-playground

./: .gitignore  README.md
ADC1/: .cproject  .mxproject  .project  ADC1 Debug.launch  ADC1.ioc  README.md
Accel_FFT_Bringup/: .cproject  .project  Accel_FFT_Bringup Debug.launch  Accel_FFT_Bringup.ioc  README.md
Bootloader_Jump/: .cproject  .project  Bootloader_Jump Debug.launch  Bootloader_Jump.ioc  README.md  STM32F407VGTX_FLASH.ld
Button_Callback/: .cproject  .mxproject  .project  Button_Callback Debug.launch  Button_Callback.ioc  README.md
Callback_Return/: .cproject  .mxproject  .project  Callback_Return Debug.launch  Callback_Return.ioc  README.md
Cloud_LLM_Call_from_ESP32/: README.md
DHT11_DWT_UART/: .cproject  .mxproject  .project  DHT11_DWT_UART Debug.launch  DHT11_DWT_UART.ioc  README.md
ESP32_to_Cloud_HTTP/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
External_Interrupts/: .cproject  .project  External_Interrupts Debug.launch  External_Interrupts.ioc  README.md
Flexible_Callback/: .cproject  .project  Flexible_Callback Debug.launch  Flexible_Callback.ioc  README.md
FreeRTOS_Basics/: .cproject  .mxproject  .project  FreeRTOS_Basics Debug.launch  FreeRTOS_Basics.ioc  README.md
FreeRTOS_ConfigAssert/: .cproject  .mxproject  .project  FreeRTOS_ConfigAssert Debug.launch  FreeRTOS_ConfigAssert.ioc  README.md
FreeRTOS_CountingSem/: .cproject  .project  FreeRTOS_CountingSem Debug.launch  FreeRTOS_CountingSem.ioc  README.md
FreeRTOS_DeferredISR/: .cproject  .project  FreeRTOS_DeferredISR Debug.launch  FreeRTOS_DeferredISR.ioc  README.md
FreeRTOS_EventFlags/: .cproject  .project  FreeRTOS_EventFlags Debug.launch  FreeRTOS_EventFlags.ioc  README.md
FreeRTOS_Mutex/: .cproject  FreeRTOS_Mutex Debug.launch  (+2 more)
LED_BLINK/: .cproject  .mxproject  CMakeLists.txt  LED_BLINK Debug.launch  LED_BLINK.ioc
LED_BLINK/Core/Inc/: main.h
LED_BLINK/Core/Src/: main.c
LED_BLINK/cmake/: stm32f4.cmake
(+264 files in other folders)
